Simple Zen Travel V2.2

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <div class="experiences__grid">
                     <article class="experience-card experience-card--featured reveal-left">
                         <div class="experience-card__image">
-                            <img src="assets/img/presentation/ Life_Experiences_Bali.webp" alt="Couple se relaxant au bord d'une piscine de luxe à Bali" loading="lazy">
+                            <img src="assets/img/presentation/ Life_Experiences_Bali.webp" alt="Vue paradisiaque de Bali" loading="lazy">
                             <div class="experience-card__overlay"></div>
                         </div>
                         <div class="experience-card__content">
@@ -219,7 +219,7 @@
                     </article>
                     <article class="experience-card reveal-right" style="--delay: 0.1s">
                         <div class="experience-card__image">
-                            <img src="assets/img/1900-ZenTravel-5.webp" alt="Vue sur la côte amalfitaine en Italie" loading="lazy">
+                            <img src="assets/img/presentation/ Life_Experiences_Antalya.webp" alt="Vue paradisiaque d'Antalya" loading="lazy">
                             <div class="experience-card__overlay"></div>
                         </div>
                         <div class="experience-card__content">
@@ -235,7 +235,7 @@
                     </article>
                     <article class="experience-card reveal-right" style="--delay: 0.2s">
                         <div class="experience-card__image">
-                            <img src="assets/img/1900-ZenTravel-13.webp" alt="Vue panoramique de Rio de Janeiro" loading="lazy">
+                            <img src="assets/img/presentation/Life_Experiences_Hawaii.webp" alt="Vue paradisiaque de Hawaii" loading="lazy">
                             <div class="experience-card__overlay"></div>
                         </div>
                         <div class="experience-card__content">
