--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <link rel="canonical" href="https://zentravel.com/">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+    <noscript><link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet"></noscript>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -55,7 +56,7 @@
     <main>
         <section class="hero" id="hero">
             <div class="hero__bg">
-                <img src="assets/img/presentation/Simple_Zen_Travel_hero_section_2.webp" alt="Voyage paradisiaque en bateau vers une île tropicale" loading="eager">
+                <img src="assets/img/presentation/Simple_Zen_Travel_hero_section_2.webp" alt="Voyage paradisiaque en bateau vers une île tropicale" loading="eager" fetchpriority="high" width="1900" height="1200">
                 <div class="hero__overlay"></div>
             </div>
             <div class="hero__content container">
@@ -535,7 +536,7 @@
         <i class="fas fa-arrow-up"></i>
     </a>
 
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/main.js" defer></script>
     
     <script type="application/ld+json">
     {
