Simple Zen Travel V2.4

--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
     <title>Simple Zen Travel - Voyagez Plus, Dépensez Moins | Plateforme de Voyage Exclusive</title>
     
     <link rel="canonical" href="https://zentravel.com/">
+    <link rel="preload" href="assets/css/style.css" as="style">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
     <noscript><link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet"></noscript>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" media="print" onload="this.media='all'">
+    <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"></noscript>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -81,13 +84,13 @@
                     <div class="concept__images reveal-left">
                         <div class="stacked-images">
                             <div class="stacked-image stacked-image--1">
-                                <img src="assets/img/presentation/Le_Concept_Simple_Zen_Travel .webp" alt="Voyage de luxe" loading="lazy">
+                                <img src="assets/img/presentation/Le_Concept_Simple_Zen_Travel .webp" alt="Voyage de luxe" width="396" height="633" loading="lazy">
                             </div>
                             <div class="stacked-image stacked-image--2">
-                                <img src="assets/img/presentation/Le_Concept_Simple_Zen_Travel_2.webp" alt="Destination paradisiaque" loading="lazy">
+                                <img src="assets/img/presentation/Le_Concept_Simple_Zen_Travel_2.webp" alt="Destination paradisiaque" width="396" height="633" loading="lazy">
                             </div>
                             <div class="stacked-image stacked-image--3">
-                                <img src="assets/img/presentation/Le_Concept_Simple_Zen_Travel_3.webp" alt="Expérience unique" loading="lazy">
+                                <img src="assets/img/presentation/Le_Concept_Simple_Zen_Travel_3.webp" alt="Expérience unique" width="295" height="471" loading="lazy">
                             </div>
                         </div>
                     </div>
@@ -127,7 +130,7 @@
 
         <section class="services section" id="services">
             <div class="services__bg">
-                <img src="assets/img/1900-ZenTravel-2.webp" alt="Vue panoramique de Santorin en Grèce" loading="lazy">
+                <img src="assets/img/1900-ZenTravel-2.webp" alt="Vue panoramique de Santorin en Grèce" width="1900" height="1200" loading="lazy">
                 <div class="services__overlay"></div>
             </div>
             <div class="container">
@@ -439,7 +442,7 @@
                                 <span>14 jours de rétractation garantie</span>
                             </div>
                             <div class="contact-feature" style="align-items: center;">
-                                <img src="assets/img/klarna.webp" alt="Klarna" style="height: 30px; width: auto;">
+                                <img src="assets/img/klarna.webp" alt="Klarna" width="54" height="30" loading="lazy">
                                 <span>Paiement en plusieurs fois disponible</span>
                             </div>
                             <div class="contact-feature">
