Simple Zen Travel V2.5

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="#" class="nav__logo">
-                <span class="logo-simple">Simple </span><span class="logo-zen">Zen </span><span class="logo-travel">Travel</span>
+                <img src="assets/img/Simple_Zen_Travel_logo_footer.webp" alt="Simple Zen Travel Logo" class="nav__logo-img" width="50" height="50" loading="eager">
+                <div class="nav__logo-text">
+                    <span class="logo-simple">Simple </span><span class="logo-zen">Zen </span><span class="logo-travel">Travel</span>
+                </div>
             </a>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
@@ -488,7 +491,10 @@
             <div class="footer__grid">
                 <div class="footer__brand">
                     <a href="#" class="footer__logo">
-                        <span class="logo-simple">Simple </span><span class="logo-zen">Zen </span><span class="logo-travel">Travel</span>
+                        <img src="assets/img/Simple_Zen_Travel_logo_footer.webp" alt="Simple Zen Travel Logo" class="footer__logo-img" width="60" height="60" loading="lazy">
+                        <div class="footer__logo-text">
+                            <span class="logo-simple">Simple </span><span class="logo-zen">Zen </span><span class="logo-travel">Travel</span>
+                        </div>
                     </a>
                     <p class="footer__tagline">Voyagez Plus, Dépensez Moins</p>
                     <div class="footer__social">
