modifications demandées simple zen travel

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="#" class="nav__logo">
-                <img src="assets/img/Simple_Zen_Travel_logo_footer.webp" alt="Simple Zen Travel Logo" class="nav__logo-img" width="50" height="50" loading="eager">
+                <img src="assets/img/Simple_Zen_Travel_logo_footer.webp" alt="Simple Zen Travel Logo" class="nav__logo-img" width="120" height="120" loading="eager">
                 <div class="nav__logo-text">
                     <span class="logo-simple">Simple </span><span class="logo-zen">Zen </span><span class="logo-travel">Travel</span>
                 </div>
@@ -44,7 +44,7 @@
                 <ul class="nav__list">
                     <li class="nav__item"><a href="#concept" class="nav__link">Le Concept</a></li>
                     <li class="nav__item"><a href="#services" class="nav__link">Services</a></li>
-                    <li class="nav__item"><a href="#experiences" class="nav__link">Expériences</a></li>
+                    <li class="nav__item"><a href="#experiences" class="nav__link">Exclusivités</a></li>
                     <li class="nav__item"><a href="#formules" class="nav__link">Formules</a></li>
                     <li class="nav__item"><a href="#ambassadeur" class="nav__link">Ambassadeur</a></li>
                     <li class="nav__item"><a href="#contact" class="nav__link nav__link--cta">Contact</a></li>
@@ -66,12 +66,10 @@
                 <div class="hero__overlay"></div>
             </div>
             <div class="hero__content container">
-                <span class="hero__badge">Travel Advantage</span>
                 <h1 class="hero__title">Voyager mieux.<br><span>Plus souvent. Et autrement.</span></h1>
                 <p class="hero__subtitle">Simple Zen Travel propose une approche différente du voyage, pensée pour celles et ceux qui veulent voyager sereinement et simplement.</p>
                 <div class="hero__buttons">
                     <a href="#concept" class="btn btn--primary">Découvrir la Plateforme</a>
-                    <a href="https://wa.me/33665010828" target="_blank" class="btn btn--secondary">Rejoignez notre équipe</a>
                 </div>
                 <div class="hero__scroll">
                     <a href="#concept" aria-label="Défiler vers le bas">
@@ -85,15 +83,21 @@
             <div class="container">
                 <div class="concept__grid">
                     <div class="concept__images reveal-left">
-                        <div class="stacked-images">
-                            <div class="stacked-image stacked-image--1">
-                                <img src="assets/img/presentation/Le_Concept_Simple_Zen_Travel .webp" alt="Voyage de luxe" width="396" height="633" loading="lazy">
+                        <div class="coverflow">
+                            <div class="coverflow__item">
+                                <img src="assets/img/presentation/Le_Concept_Simple_Zen_Travel .webp" alt="Voyage de luxe" loading="lazy">
                             </div>
-                            <div class="stacked-image stacked-image--2">
-                                <img src="assets/img/presentation/Le_Concept_Simple_Zen_Travel_2.webp" alt="Destination paradisiaque" width="396" height="633" loading="lazy">
+                            <div class="coverflow__item">
+                                <img src="assets/img/presentation/Le_Concept_Simple_Zen_Travel_2.webp" alt="Destination paradisiaque" loading="lazy">
                             </div>
-                            <div class="stacked-image stacked-image--3">
-                                <img src="assets/img/presentation/Le_Concept_Simple_Zen_Travel_3.webp" alt="Expérience unique" width="295" height="471" loading="lazy">
+                            <div class="coverflow__item">
+                                <img src="assets/img/presentation/Le_Concept_Simple_Zen_Travel_3.webp" alt="Expérience unique" loading="lazy">
+                            </div>
+                            <div class="coverflow__item">
+                                <img src="assets/img/presentation/Simple_Zen_Travel_hero_section_3.webp" alt="Voyage découverte" loading="lazy">
+                            </div>
+                            <div class="coverflow__item">
+                                <img src="assets/img/presentation/Simple_Zen_Travel_hero_section_4.webp" alt="Aventure voyage" loading="lazy">
                             </div>
                         </div>
                     </div>
@@ -168,7 +172,7 @@
                             <i class="fas fa-plane"></i>
                         </div>
                         <h3 class="service-card__title">Transports</h3>
-                        <p class="service-card__text">Vols, voitures, trains et croisières au meilleur prix avec cumul de cashback (Crédits Voyage).</p>
+                        <p class="service-card__text">Vols, trains, bus et location de voitures au meilleur tarif.</p>
                     </article>
                     <article class="service-card service-card--more reveal-up" style="--delay: 0.5s">
                         <div class="service-card__icon">
@@ -203,9 +207,9 @@
         <section class="experiences section" id="experiences">
             <div class="container">
                 <div class="section__header reveal-up">
-                    <span class="section__tag">Life Experiences</span>
+                    <span class="section__tag">Les exclusivités</span>
                     <h2 class="section__title">Des expériences <span>haut de gamme</span></h2>
-                    <p class="section__subtitle">Séjours sélectionnés avec soin, pensés pour conjuguer confort, simplicité et liberté.</p>
+                    <p class="section__subtitle">Plus de 80 séjours exclusifs sélectionnés par an avec soin, pensés pour conjuguer confort, simplicité et liberté.</p>
                 </div>
                 <div class="experiences__grid">
                     <article class="experience-card experience-card--featured reveal-left">
@@ -215,12 +219,12 @@
                         </div>
                         <div class="experience-card__content">
                             <span class="experience-card__location"><i class="fas fa-map-marker-alt"></i> Bali, Indonésie</span>
-                            <h3 class="experience-card__title">5* tout inclus</h3>
+                            <h3 class="experience-card__title"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i> tout inclus</h3>
                             <p class="experience-card__details">5 jours / 4 nuits</p>
                             <div class="experience-card__price">
                                 <span class="price-from">À partir de</span>
                                 <span class="price-value">167 €</span>
-                                <span class="price-note">après déduction de vos points</span>
+                                <span class="price-note">après déduction de vos points de fidélité</span>
                             </div>
                         </div>
                     </article>
@@ -231,12 +235,12 @@
                         </div>
                         <div class="experience-card__content">
                             <span class="experience-card__location"><i class="fas fa-map-marker-alt"></i> Antalya, Turquie</span>
-                            <h3 class="experience-card__title">5* tout inclus</h3>
+                            <h3 class="experience-card__title"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i> tout inclus</h3>
                             <p class="experience-card__details">4 jours / 3 nuits</p>
                             <div class="experience-card__price">
                                 <span class="price-from">À partir de</span>
                                 <span class="price-value">256 €</span>
-                                <span class="price-note">après déduction de vos points</span>
+                                <span class="price-note">après déduction de vos points de fidélité</span>
                             </div>
                         </div>
                     </article>
@@ -247,12 +251,12 @@
                         </div>
                         <div class="experience-card__content">
                             <span class="experience-card__location"><i class="fas fa-map-marker-alt"></i> Hawaii</span>
-                            <h3 class="experience-card__title">5*</h3>
+                            <h3 class="experience-card__title"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></h3>
                             <p class="experience-card__details">5 jours / 4 nuits</p>
                             <div class="experience-card__price">
                                 <span class="price-from">À partir de</span>
                                 <span class="price-value">293 €</span>
-                                <span class="price-note">après déduction de vos points</span>
+                                <span class="price-note">après déduction de vos points de fidélité</span>
                             </div>
                         </div>
                     </article>
@@ -283,20 +287,20 @@
                         <a href="#contact" class="btn btn--outline">Choisir VIP</a>
                     </article>
                     <article class="pricing-card pricing-card--featured reveal-up" style="--delay: 0.2s">
-                        <div class="pricing-card__badge">Populaire</div>
                         <div class="pricing-card__header">
                             <h3 class="pricing-card__name">Élite</h3>
                             <p class="pricing-card__tagline">Accès total <span class="ampersand">&amp;</span> cumul de points</p>
                         </div>
                         <ul class="pricing-card__features">
                             <li><i class="fas fa-check"></i> Toute la formule VIP.</li>
-                            <li><i class="fas fa-check"></i> Accès à tous les services.</li>
+                            <li><i class="fas fa-check"></i> Accès aux 9 autres services.</li>
                             <li><i class="fas fa-check"></i> Cumul de points fidélité.</li>
                             <li><i class="fas fa-check"></i> Accès aux exclusivités.</li>
                         </ul>
                         <a href="#contact" class="btn btn--primary">Choisir Élite</a>
                     </article>
                     <article class="pricing-card pricing-card--turbo reveal-up" style="--delay: 0.3s">
+                        <div class="pricing-card__badge pricing-card__badge--turbo">Populaire</div>
                         <div class="pricing-card__header">
                             <h3 class="pricing-card__name">Turbo</h3>
                             <p class="pricing-card__tagline">Extension à vie</p>
@@ -317,7 +321,7 @@
             <div class="container">
                 <div class="ambassadeur__grid">
                     <div class="ambassadeur__content reveal-left">
-                        <span class="section__tag">Opportunité Business</span>
+                        <span class="section__tag">Possibilité d'opportunité</span>
                         <h2 class="section__title section__title--large">Simple Zen Travel peut se vivre de <span>différentes manières</span></h2>
                         <p class="ambassadeur__text">Pour certains, l'expérience se limite au voyage. Pour d'autres, elle peut aller un peu plus loin. Ces possibilités sont expliquées simplement lors d'un échange, selon les envies et curiosité de chacun.</p>
                         
@@ -325,9 +329,9 @@
                     </div>
                     <div class="ambassadeur__image reveal-right">
                         <img src="assets/img/presentation/Simple_Zen_Travel_opportunite.webp" alt="Amis heureux en voyage" loading="lazy">
-                        <div class="ambassadeur__stats">
+                        <div class="ambassadeur__stats ambassadeur__stats--styled">
                             <div class="stat">
-                                <span class="stat__label" style="font-size: 1.1rem; color: var(--color-accent); font-weight: 600;">Une approche flexible et personnalisée du voyage</span>
+                                <span class="stat__label">Une approche flexible et personnalisée du voyage</span>
                             </div>
                         </div>
                     </div>
@@ -353,7 +357,7 @@
                             <i class="fas fa-coins"></i>
                         </div>
                         <h3>Réinjection des Points</h3>
-                        <p>Avantages immédiats : dès votre inscription vous disposez immédiatement de <strong></strong>points fidélités qui augmenterons tous les mois</strong>.</p>
+                        <p>Avantages immédiats : dès votre inscription vous disposez immédiatement de <strong>vos points de fidélités qui se cumulent tous les mois</strong>.</p>
                     </article>
 
                     <article class="benefit-card reveal-up" style="--delay: 0.2s">
@@ -402,12 +406,12 @@
 
         <section class="team section" id="team">
             <div class="team__bg">
-                <img src="assets/img/presentation/Simple_Zen_Travel_team_3.webp" alt="Hall d'hôtel de luxe avec voyageurs" loading="lazy">
+                <img src="assets/img/presentation/Simple_Zen_Travel_team_2.webp" alt="Hall d'hôtel de luxe avec voyageurs" loading="lazy">
                 <div class="team__overlay"></div>
             </div>
             <div class="container">
                 <div class="team__content reveal-up">
-                    <span class="section__tag section__tag--light">L'Esprit d'Équipe</span>
+                    <span class="section__tag section__tag--light">Service client</span>
                     <h2 class="section__title section__title--light">Vous n'êtes jamais seul</h2>
                     <p class="team__text">Notre service client très réactif est disponible 7j/7 24h/24 dans plus de 20 langues.</p>
                     <blockquote class="team__quote">
@@ -463,6 +467,10 @@
                             <div class="form-group">
                                 <label for="email">Email</label>
                                 <input type="email" id="email" name="email" required placeholder="votre@email.com">
+                            </div>
+                            <div class="form-group">
+                                <label for="phone">Téléphone <span class="form-optional">(optionnel)</span></label>
+                                <input type="tel" id="phone" name="phone" placeholder="+33 6 00 00 00 00">
                             </div>
                             <div class="form-group">
                                 <label for="subject">Objet</label>
@@ -537,6 +545,7 @@
             </div>
             <div class="footer__bottom">
                 <p>&copy; 2026 Simple Zen Travel. Tous droits réservés. | 14 jours de rétractation garantie.</p>
+                <p class="footer__credit">Propulsé par <a href="https://e-novateur.fr" target="_blank" rel="noopener noreferrer">e-novateur</a></p>
             </div>
         </div>
     </footer>
