sur toute la plateforme - changement de texte

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                             <i class="fas fa-percentage"></i>
                         </div>
                         <h3>Cashback Illimité</h3>
-                        <p>Chaque réservation ou achat sur la boutique en ligne génère immédiatement du cashback (Crédits Voyage) <strong>sans date de péremption</strong>.</p>
+                        <p>Chaque réservation ou achat sur toute la plateforme génère immédiatement du cashback (Crédits Voyage) <strong>sans date de péremption</strong>.</p>
                     </article>
 
                     <article class="benefit-card reveal-up" style="--delay: 0.5s">
