fix after call with Thierry

--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
                 <div class="hero__overlay"></div>
             </div>
             <div class="hero__content container">
-                <h1 class="hero__title">Voyager mieux.<br><span>Plus souvent. Et autrement.</span></h1>
-                <p class="hero__subtitle">Simple Zen Travel propose une approche différente du voyage, pensée pour celles et ceux qui veulent voyager sereinement et simplement.</p>
+                <h1 class="hero__title">Voyager mieux.<br><span>Plus souvent <br>et autrement.</span></h1>
+                <p class="hero__subtitle">Simple Zen Travel propose une approche différente du voyage, pensée pour celles et ceux qui veulent voyager sereinement <br>et simplement.</p>
+                <p class="hero__subtitle hero__subtitle--highlight">Simple Zen Travel ne se comprend pas en 2 minutes, <span class="text-accent">il se découvre</span>.</p>
                 <div class="hero__buttons">
                     <a href="#concept" class="btn btn--primary">Découvrir la Plateforme</a>
                 </div>
@@ -103,7 +104,7 @@
                     </div>
                     <div class="concept__content reveal-right">
                         <span class="section__tag">Le Concept</span>
-                        <h2 class="section__title">Transformez vos projets de voyage en <span>réalité</span></h2>
+                        <h2 class="section__title">Transformez vos projets de voyage<br><span>en réalité</span></h2>
                         <p class="concept__text">Plutôt que de voyager de manière occasionnelle et contrainte, Simple Zen Travel propose une approche différente, où votre façon de réserver devient plus simple et plus intelligente. Vous accéderez à des avantages pensés pour faciliter et financer vos futurs voyages, en toute liberté.</p>
                         <div class="concept__highlight">
                             <div class="highlight__icon">
@@ -120,6 +121,7 @@
             </div>
         </section>
 
+        <!-- Section vidéo en standby
         <section class="video-section section" id="video">
             <div class="container">
                 <div class="video-section__content reveal-up">
@@ -134,6 +136,7 @@
                 </div>
             </div>
         </section>
+        -->
 
         <section class="services section" id="services">
             <div class="services__bg">
@@ -158,7 +161,7 @@
                             <i class="fas fa-robot"></i>
                         </div>
                         <h3 class="service-card__title">IA Travel Planner</h3>
-                        <p class="service-card__text">Organisez votre séjour en moins de 45 secondes grâce à notre intelligence artificielle intégrée.</p>
+                        <p class="service-card__text">Organisez votre séjour <span class="text-accent">en moins de 45 secondes</span> grâce à notre intelligence artificielle intégrée.</p>
                     </article>
                     <article class="service-card reveal-up" style="--delay: 0.3s">
                         <div class="service-card__icon">
@@ -172,14 +175,14 @@
                             <i class="fas fa-plane"></i>
                         </div>
                         <h3 class="service-card__title">Transports</h3>
-                        <p class="service-card__text">Vols, trains, bus et location de voitures au meilleur tarif.</p>
+                        <p class="service-card__text">Vols, trains, bus et location de voitures <span class="text-accent">au meilleur tarif</span>.</p>
                     </article>
                     <article class="service-card service-card--more reveal-up" style="--delay: 0.5s">
                         <div class="service-card__icon">
                             <i class="fas fa-plus"></i>
                         </div>
                         <h3 class="service-card__title">+ 12 autres services</h3>
-                        <p class="service-card__text">Découvrez l'ensemble de nos services exclusifs pour voyager mieux et plus souvent.</p>
+                        <p class="service-card__text">Découvrez l'ensemble de nos services exclusifs <span class="text-accent">pour voyager mieux et plus souvent</span>.</p>
                     </article>
                 </div>
                 <div class="partnerships reveal-up">
@@ -208,7 +211,7 @@
             <div class="container">
                 <div class="section__header reveal-up">
                     <span class="section__tag">Les exclusivités</span>
-                    <h2 class="section__title">Des expériences <span>haut de gamme</span></h2>
+                    <h2 class="section__title">Des expériences <span>uniques à vivre !</span></h2>
                     <p class="section__subtitle">Plus de 80 séjours exclusifs sélectionnés par an avec soin, pensés pour conjuguer confort, simplicité et liberté.</p>
                 </div>
                 <div class="experiences__grid">
@@ -264,13 +267,56 @@
             </div>
         </section>
 
+        <section class="steps section" id="steps">
+            <div class="container">
+                <div class="section__header reveal-up">
+                    <span class="section__tag">Simple et efficace</span>
+                    <h2 class="section__title">Comment ça <span>fonctionne ?</span></h2>
+                    <p class="section__subtitle">En 3 étapes simples</p>
+                </div>
+                <div class="steps__grid">
+                    <div class="step-card reveal-up" style="--delay: 0.1s">
+                        <div class="step-card__number">1</div>
+                        <h3 class="step-card__title">Vous choisissez votre formule</h3>
+                    </div>
+                    <div class="step-card reveal-up" style="--delay: 0.2s">
+                        <div class="step-card__number">2</div>
+                        <h3 class="step-card__title">Vous réservez vos voyages via la plateforme</h3>
+                    </div>
+                    <div class="step-card reveal-up" style="--delay: 0.3s">
+                        <div class="step-card__number">3</div>
+                        <h3 class="step-card__title">Vous cumulez et utilisez vos points comme vous le souhaitez</h3>
+                    </div>
+                </div>
+                <p class="steps__conclusion reveal-up">Le reste est expliqué simplement lors d'un <strong>échange personnalisé</strong>.</p>
+            </div>
+        </section>
+
         <section class="formules section" id="formules">
             <div class="formules__bg"></div>
             <div class="container">
                 <div class="section__header reveal-up">
                     <span class="section__tag">Nos Formules</span>
                     <h2 class="section__title">Choisissez votre porte d'entrée <span>vers le voyage</span></h2>
-                    <p class="section__subtitle">Toutes nos formules sont <strong>sans engagement</strong> et sans frais de résiliation.<br>Le fonctionnement et les conditions sont expliqués simplement lors d'une présentation personnalisée.</p>
+                    <p class="section__subtitle">Toutes nos formules sont <strong>sans engagement</strong> <br>et <span class="text-accent">sans frais de résiliation</span>.<br>Le fonctionnement et les conditions sont expliqués simplement lors d'un échange découverte personnalisé.</p>
+                </div>
+                <div class="pour-qui__grid reveal-up">
+                    <div class="pour-qui__item" style="--delay: 0.1s">
+                        <i class="fas fa-check-circle"></i>
+                        <p>Pour ceux qui veulent <strong>voyager plus souvent</strong></p>
+                    </div>
+                    <div class="pour-qui__item" style="--delay: 0.2s">
+                        <i class="fas fa-check-circle"></i>
+                        <p>Pour ceux qui veulent <strong>optimiser leur budget</strong></p>
+                    </div>
+                    <div class="pour-qui__item" style="--delay: 0.3s">
+                        <i class="fas fa-check-circle"></i>
+                        <p>Pour ceux qui veulent <strong>tout centraliser</strong></p>
+                    </div>
+                    <div class="pour-qui__item" style="--delay: 0.4s">
+                        <i class="fas fa-check-circle"></i>
+                        <p>Pour ceux qui veulent <strong>aller plus loin</strong></p>
+                    </div>
                 </div>
                 <div class="formules__grid">
                     <article class="pricing-card reveal-up" style="--delay: 0.1s">
@@ -284,7 +330,6 @@
                             <li><i class="fas fa-check"></i> Réductions minimales membres.</li>
                             <li><i class="fas fa-check"></i> Support client</li>
                         </ul>
-                        <a href="#contact" class="btn btn--outline">Choisir VIP</a>
                     </article>
                     <article class="pricing-card pricing-card--featured reveal-up" style="--delay: 0.2s">
                         <div class="pricing-card__header">
@@ -297,7 +342,6 @@
                             <li><i class="fas fa-check"></i> Cumul de points fidélité.</li>
                             <li><i class="fas fa-check"></i> Accès aux exclusivités.</li>
                         </ul>
-                        <a href="#contact" class="btn btn--primary">Choisir Élite</a>
                     </article>
                     <article class="pricing-card pricing-card--turbo reveal-up" style="--delay: 0.3s">
                         <div class="pricing-card__badge pricing-card__badge--turbo">Populaire</div>
@@ -311,8 +355,11 @@
                             <li><i class="fas fa-star"></i> Accès anticipé aux exclusivités.</li>
                             <li><i class="fas fa-star"></i> Réductions maximales membres (-10 à -15% supplémentaire)</li>
                         </ul>
-                        <a href="#contact" class="btn btn--gold">Choisir Turbo</a>
                     </article>
+                </div>
+                <div class="formules__cta reveal-up">
+                    <a href="#contact" class="btn btn--primary btn--large">Quelle formule me correspond ?</a>
+                    <p class="formules__reassurance">Ce rendez-vous n'engage à rien. Il permet simplement de voir si cela vous correspond.</p>
                 </div>
             </div>
         </section>
@@ -331,7 +378,7 @@
                         <img src="assets/img/presentation/Simple_Zen_Travel_opportunite.webp" alt="Amis heureux en voyage" loading="lazy">
                         <div class="ambassadeur__stats ambassadeur__stats--styled">
                             <div class="stat">
-                                <span class="stat__label">Une approche flexible et personnalisée du voyage</span>
+                                <span class="stat__label">Une approche flexible et personnalisée<br>du voyage</span>
                             </div>
                         </div>
                     </div>
@@ -416,7 +463,7 @@
                     <p class="team__text">Notre service client très réactif est disponible 7j/7 24h/24 dans plus de 20 langues.</p>
                     <blockquote class="team__quote">
                         <i class="fas fa-quote-left"></i>
-                        <p>"Voyager autrement, c’est aussi être accompagné autrement."</p>
+                        <p>Voyager autrement, c'est aussi être<br>accompagné autrement.</p>
                     </blockquote>
                     <a href="#contact" class="btn btn--secondary">Rejoindre l'aventure</a>
                 </div>
@@ -429,10 +476,10 @@
                     <div class="contact__info reveal-left">
                         <span class="section__tag">Contact</span>
                         <h2 class="section__title">Prêt à <span>voyager autrement ?</span></h2>
-                        <p class="contact__text">Réservez votre présentation personnalisée ou contactez-nous directement.</p>
+                        <p class="contact__text">Réservez votre échange découverte ou contactez-nous directement.</p>
                         
                         <a href="https://calendly.com/szt-simplezentravel/presentation_opportunite_voyage" target="_blank" class="btn btn--primary btn--large" style="width: 100%; margin-bottom: 30px; text-align: center;">
-                            <i class="fas fa-calendar-check"></i> Réserver une présentation
+                            <i class="fas fa-calendar-check"></i> Réserver un échange découverte
                         </a>
                         
                         <div class="contact__features">
